adds the option to resume downloads of files